Fixed Help related issues and other minor UI issues
Help Related Issues
- Remove link from menu.xml
- Enable/disable help link in header for a page
- Code Cleanup for HelpHandler

Minor UI Issues
- Chart controls clickable area is too small and applies cursor style to the whole control panel
- Virtual Router -> Interface -> Instance link is broken
- Remove scrolling in Monitor -> Networking -> Project -> Instance grid
- expand collapse doesn't work correctly for JSON inside grids

Closes-Bug: #1627211, Closes-Bug: #1627212.

--- a/webroot/common/ui/css/contrail.components.css
+++ b/webroot/common/ui/css/contrail.components.css
@@ -822,6 +822,7 @@
 .control-panel-items .control-panel-item {
     padding: 5px 10px;
     margin: 5px 0 0;
+    cursor: pointer;
     background-color: #f9f9f9;
     border: 1px solid #efefef;
 }
